feat: add API on api page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,7 @@ code {
 .animate-moveX {
   animation: moveX 2s ease-in-out infinite;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
